@@ -609,6 +609,7 @@ UnloadKeyboardLayout@4
 UnpackDDElParam@16
 UnregisterClassA@8
 UnregisterClassW@8
+UnregisterDeviceNotification@4
 UnregisterHotKey@8
 UpdateLayeredWindow@36
 UpdateWindow@4
